--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100% !important;
 }
 
 .logo {
@@ -39,4 +39,10 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
