fixing design adding header, menu and responsive

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -8,3 +8,9 @@
   letter-spacing: 1px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
+
+@media (max-width: 768px) {
+  .top-menu{
+    width: 100%;
+  }
+}
