--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
+  padding: 0;
   text-align: center;
   width: 100% !important;
 }
@@ -41,8 +42,25 @@
   color: #888;
 }
 
-
 button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+.body-container {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 768px) {
+  .body-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
+
+  }
+  .body-sidebar{
+    width: 100%;
+  }
 }
