--- a/client/src/components/ExpensePage/ExpensesPage.css
+++ b/client/src/components/ExpensePage/ExpensesPage.css
@@ -1,6 +1,5 @@
-
 .visaListExpense {
-  background: linear-gradient(135deg, #e0f7fa, #ffffff);
+  background: linear-gradient(135deg, #8be2ed, #ffffff);
   border: 2px dashed #00acc1;
   border-radius: 1rem;
   padding: 1rem 1.5rem;
@@ -14,10 +13,7 @@
 .visaListExpense:hover {
   transform: scale(1.02);
 }
-#left{
-   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+#left {
   animation: slideOut 0.6s ease-in-out;
 }
 
@@ -35,10 +31,14 @@
     opacity: 1;
   }
 }
-#right{
-   display: flex;
+#left,
+#right {
+  display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+}
+#right {
   animation: slideIn 0.6s ease-in-out;
 }
 
@@ -57,11 +57,69 @@
   }
 }
 
-.container-page{
+.container-page {
+  max-width: 90%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
   align-items: center;
+}
+
+.total-expense {
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #007c91;
+  background-color: #e0f7fa;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 4px 10px rgba(0, 124, 145, 0.1);
+}
+
+.visaTitle {
+  background-color: #00acc1;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 768px) {
+  @keyframes slideIn {
+    0% {
+      transform: translateX(10%);
+      opacity: 0;
+    }
+    60% {
+      transform: translateX(-5%);
+      opacity: 0.8;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slideOut {
+    0% {
+      transform: translateX(-10%);
+      opacity: 0;
+    }
+    60% {
+      transform: translateX(5%);
+      opacity: 0.8;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
 }
