--- a/client/src/components/menu/Menu.css
+++ b/client/src/components/menu/Menu.css
@@ -1,7 +1,7 @@
 menu {
   display: flex;
-    margin-block-start:0;
-    margin-block-end:0;
+  margin-block-start: 0;
+  margin-block-end: 0;
   justify-content: space-between;
   align-items: center;
   background-color: #00acc1;
@@ -9,7 +9,7 @@ menu {
   padding: 0.8rem 2rem;
   border-bottom: 4px solid #007c91;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
 }
 
 menu a img {
@@ -38,7 +38,7 @@ menu ul li {
 }
 
 menu ul li::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 0%;
   height: 2px;
@@ -57,11 +57,16 @@ menu ul li:hover {
 }
 
 @media (max-width: 768px) {
+  menu a img {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
   menu {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     min-height: 800px;
+    padding: 0.4rem 1rem;
   }
 
   menu ul {
@@ -70,7 +75,10 @@ menu ul li:hover {
     margin-top: 1rem;
     gap: 1rem;
   }
-
+  menu ul li {
+    cursor: pointer;
+    font-size: 0.6rem;
+  }
   menu a img {
     width: 3rem;
     height: 3rem;
