--- a/client/src/components/menu/Menu.css
+++ b/client/src/components/menu/Menu.css
@@ -6,15 +6,15 @@ menu {
   align-items: center;
   background-color: #00acc1;
   color: white;
-  padding: 0.8rem 2rem;
+  padding: 0.8rem 1rem;
   border-bottom: 4px solid #007c91;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", sans-serif;
 }
 
+menu a,
 menu a img {
-  width: 3.5rem;
-  height: 3.5rem;
+  height: 2rem;
   transition: transform 0.3s ease;
 }
 
@@ -32,7 +32,7 @@ menu ul {
 
 menu ul li {
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 0.7rem;
   transition: color 0.2s ease;
   position: relative;
 }
