--- a/client/src/components/menu/Menu.css
+++ b/client/src/components/menu/Menu.css
@@ -57,17 +57,13 @@ menu ul li:hover {
 }
 
 @media (max-width: 768px) {
-  menu a img {
-    width: 1.8rem;
-    height: 1.8rem;
-    padding-top: 1.4rem;
-  }
   menu {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     min-height: 800px;
-    padding: 1rem 1rem;
+    padding: 4rem 1rem;
+    gap: 4rem;
   }
 
   menu ul {
